[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com",
]
categories = ["science"]
description = "Procedural macros for CubeCL"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubecl-macros"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/cubecl-macros"
version.workspace = true

[lib]
proc-macro = true

[features]
default = []
std = []

[dependencies]
darling = { workspace = true }
derive-new = { workspace = true }
ident_case = { workspace = true }
prettyplease = "0.2"
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

cubecl-common = { path = "../cubecl-common", version = "0.2", default-features = false }

[dev-dependencies]
cubecl-core = { path = "../cubecl-core", version = "0.2", default-features = false }
cubecl-cuda = { path = "../cubecl-cuda", version = "0.2", default-features = false }
cubecl-linalg = { path = "../cubecl-linalg", version = "0.2", default-features = false }
cubecl-wgpu = { path = "../cubecl-wgpu", version = "0.2", default-features = false }
pretty_assertions = { workspace = true }
