[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com",
]
categories = ["science"]
description = "Procedural macros for CubeCL"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubecl-macros"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-macros"
version.workspace = true

[lib]
proc-macro = true

[features]
debug_symbols = []
default = []
std = []

[dependencies]
darling = { workspace = true }
derive-new = { workspace = true }
ident_case = { workspace = true }
prettyplease = "0.2"
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

cubecl-common = { path = "../cubecl-common", version = "0.7", default-features = false }
