[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com",
]
categories = ["science"]
description = "Procedural macros for CubeCL"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubecl-macros"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-macros"
version.workspace = true

[lib]
proc-macro = true


[lints]
workspace = true


[features]
debug_symbols = ["cubecl-macros-core/debug_symbols"]
default = []
std = ["cubecl-macros-core/std"]

tracing = ["cubecl-macros-core/tracing"]


[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }

cubecl-macros-core = { path = "../cubecl-macros-core", version = "=0.11.0-pre.1" }
