[package]
authors = ["dcvz <david@dcvz.io>"]
categories = ["science"]
description = "Metal runtime for CubeCL"
edition.workspace = true
keywords = ["gpu", "metal"]
license.workspace = true
name = "cubecl-metal"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-metal"
version.workspace = true

[features]
default = ["std"]
std = [
    "cubecl-runtime/std",
    "cubecl-common/std",
    "cubecl-core/std",
]

[dependencies]
cubecl-common = { path = "../cubecl-common", version = "=0.9.0", default-features = false, features = ["cache"] }
cubecl-core = { path = "../cubecl-core", version = "=0.9.0", default-features = false }
cubecl-ir = { path = "../cubecl-ir", version = "=0.9.0", default-features = false }
cubecl-runtime = { path = "../cubecl-runtime", version = "=0.9.0", default-features = false }
cubecl-cpp = { path = "../cubecl-cpp", version = "=0.9.0", features = ["metal"] }

# Metal bindings
objc2 = "0.6"
objc2-metal = { version = "0.3", features = ["block2", "MTLLibrary"] }
objc2-foundation = "0.3"
block2 = "0.6"

# Utilities
log = { workspace = true }
derive-new = { workspace = true }
hashbrown = { workspace = true }
bytemuck = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
async-channel = { workspace = true }

[dev-dependencies]
cubecl-core = { path = "../cubecl-core", version = "=0.9.0", features = ["export_tests"] }
cubecl-std = { path = "../cubecl-std", version = "=0.9.0", features = ["export_tests"] }
test-log = { workspace = true, features = ["trace"] }
paste = { workspace = true }

[lints]
workspace = true
