[package]
authors = ["Tracel Technologies Inc."]
categories = ["science"]
description = "Metal runtime for the CubeCL"
edition.workspace = true
keywords = ["gpu", "compiler", "metal"]
license.workspace = true
name = "cubecl-msl"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-msl"
version.workspace = true

[features]
default = [
  "std",
  "cubecl-common/default",
  "cubecl-core/default",
  "cubecl-runtime/default",
]
std = ["cubecl-common/std", "cubecl-core/std", "cubecl-runtime/std"]

[dependencies]
cubecl-common = { path = "../cubecl-common", version = "0.5.0", default-features = false }
cubecl-core = { path = "../cubecl-core", version = "0.5.0" }
cubecl-runtime = { path = "../cubecl-runtime", version = "0.5.0", default-features = false, features = [
  "channel-mutex",
] }
