[package]
authors = ["Genna Wingert"]
categories = ["algorithms"]
description = "Compiler optimizations for CubeCL"
edition.workspace = true
keywords = ["gpu", "compiler"]
license.workspace = true
name = "cubecl-opt"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-opt"
version.workspace = true

[features]
default = ["std", "cubecl-common/default", "cubecl-ir/default"]
std = ["cubecl-common/std"]

[dependencies]
cubecl-common = { path = "../cubecl-common", version = "0.6.0", default-features = false }
cubecl-ir = { path = "../cubecl-ir", version = "0.6.0", default-features = false }
cubecl-core = { path = "../cubecl-core", version = "0.6.0", default-features = false }

float-ord = "0.3"
log = "0.4"
num = "0.4"
petgraph = { version = "0.6" }
smallvec = { workspace = true }
stable-vec = { version = "0.4" }
type-map = { version = "0.5" }
