[package]
authors = ["Genna Wingert"]
categories = ["algorithms"]
description = "Compiler optimizations for CubeCL"
edition.workspace = true
keywords = ["gpu", "compiler"]
license.workspace = true
name = "cubecl-opt"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-opt"
version.workspace = true


[lints]
workspace = true


[features]
default = ["std", "cubecl-common/default", "cubecl-ir/default"]
std = ["cubecl-common/std"]

tracing = ["cubecl-common/tracing", "cubecl-ir/tracing", "cubecl-core/tracing"]


[dependencies]
cubecl-common = { path = "../cubecl-common", version = "=0.11.0-pre.1", default-features = false }
cubecl-core = { path = "../cubecl-core", version = "=0.11.0-pre.1", default-features = false }
cubecl-ir = { path = "../cubecl-ir", version = "=0.11.0-pre.1", default-features = false }

pliron = { workspace = true }

derive-new = { workspace = true }
float-ord = "0.3"
hashbrown = { workspace = true }
itertools = { workspace = true }
log = "0.4"
num = { workspace = true }
smallvec = { workspace = true }
stable-vec = { version = "0.4" }
thiserror = { workspace = true }
type-map = { version = "0.5" }

[dev-dependencies]
test-log = { workspace = true, features = ["trace"] }
