[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science", "mathematics", "algorithms"]
description = "CubeCL Quantization Library."
edition.workspace = true
keywords = []
license.workspace = true
name = "cubecl-quant"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-quant"
version.workspace = true

[features]
default = ["kernels"]
kernels = ["cubecl-core", "cubecl-runtime", "cubecl-std"]
export_tests = []

[dependencies]
cubecl-core = { path = "../cubecl-core", version = "0.7.0", default-features = false, optional = true }
cubecl-runtime = { path = "../cubecl-runtime", version = "0.7.0", default-features = false, optional = true }
cubecl-std = { path = "../cubecl-std", version = "0.7.0", default-features = false, optional = true }

half.workspace = true
serde = { workspace = true }
