[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com>",
    "maxtremblay <t.maxime@pm.me>"
]
categories = ["science", "mathematics", "algorithms"]
description = "CubeCL Standard Library."
edition.workspace = true
keywords = []
license.workspace = true
name = "cubecl-reduce"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/cubecl-reduce"
version.workspace = true

[features]
default = [
  "std",
  "cubecl-runtime/default",
  "cubecl-core/default"
]
std = ["cubecl-runtime/std", "cubecl-core/std"]

[dependencies]
cubecl-core = { path = "../cubecl-core", version = "0.4.0", default-features = false }
cubecl-runtime = { path = "../cubecl-runtime", version = "0.4.0", default-features = false }
num-traits = "0.2.19"
