[package]
authors = ["louisfd <louisfd94@gmail.com>", "Nathaniel Simard"]
categories = ["science"]
description = "Crate that helps creating high performance async runtimes for CubeCL."
edition.workspace = true
keywords = ["deep-learning", "machine-learning", "data"]
license.workspace = true
name = "cubecl-runtime"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-runtime"
version.workspace = true

[features]
default = [
    "std",
    "channel-mutex",
    "channel-mpsc",
    "channel-cell",
    "storage-bytes",
    "cubecl-common/default",
]
std = ["cubecl-common/std"]
channel-mutex = []
channel-cell = []
channel-mpsc = ["dep:async-channel", "dep:pollster"] # Assume std
storage-bytes = []

[dependencies]
cubecl-common = { path = "../cubecl-common", version = "0.2.0", default-features = false }
derive-new = { workspace = true }
log = { workspace = true }
hashbrown = { workspace = true }

pollster = { workspace = true, optional = true }
async-channel = { workspace = true, optional = true }

# Persistent cache deps - has to match the autotune_persistent_cache cfg.
[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
md5 = { workspace = true }

[target.'cfg(target_has_atomic = "ptr")'.dependencies]
spin = { workspace = true, features = ["mutex", "spin_mutex"] }

[target.'cfg(not(target_has_atomic = "ptr"))'.dependencies]
spin = { workspace = true, features = ["mutex", "spin_mutex", "portable_atomic"] }


[target.'cfg(target_family = "wasm")'.dependencies]
web-time = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
rand = { workspace = true }

[build-dependencies]
cfg_aliases = "0.2.1"

[[bench]]
name = "dynamic"
harness = false
