[package]
authors = ["Friedrich Schirmer"]
categories = ["science", "mathematics", "algorithms"]
description = "CubeCL Scan Algorithms."
edition.workspace = true
keywords = []
license.workspace = true
name = "cubecl-scan"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-scan"
version.workspace = true

[features]
default = ["std", "cubecl-runtime/default", "cubecl-core/default"]
export_tests = ["pretty_assertions", "rand"]
std = ["cubecl-runtime/std", "cubecl-core/std"]

[dependencies]
cubecl-core = { path = "../cubecl-core", version = "0.7.0", default-features = false }
cubecl-runtime = { path = "../cubecl-runtime", version = "0.7.0", default-features = false }
cubecl-std = { path = "../cubecl-std", version = "0.7.0", default-features = false }
num-traits = "0.2.19"
pretty_assertions = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
serde = { workspace = true }
half = { workspace = true }
